# vulkanRender

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  vulkan_renderer_架构设计文档.md
cmake/: CompilerWarnings.cmake
shaders/: common.glsl  deferred_lighting.frag  deferred_lighting.vert  lighting.glsl  pbr.glsl  shadow.glsl  triangle.frag  triangle.vert
src/: main.cpp
src/common/: NonCopyable.h
src/core/: Application.cpp  Application.h
src/renderer/: Device.cpp  Device.h  PipelineManager.cpp  PipelineManager.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  RendererV2.cpp  ResourceManager.cpp  ResourceManager.h  Swapchain.cpp  Swapchain.h
src/renderer/descriptor/: DescriptorBuilder.cpp  DescriptorBuilder.h
src/renderer/format/: FormatSelector.cpp  FormatSelector.h
src/renderer/frame/: CameraUniformService.cpp  CameraUniformService.h  DrawFrameOrchestrator.cpp  DrawFrameOrchestrator.h  FrameRecorder.cpp  FrameRecorder.h  LightingPushBuilder.cpp  LightingPushBuilder.h  PresentFlow.cpp  PresentFlow.h  SyncManager.cpp  SyncManager.h
src/renderer/framegraph/: RenderGraph.cpp  RenderGraph.h
src/renderer/framegraph/passes/: SceneFrameGraphPass.cpp  SceneFrameGraphPass.h  UiFrameGraphPass.cpp  UiFrameGraphPass.h
src/renderer/input/: InputController.cpp  InputController.h
src/renderer/lifecycle/: RendererInitPipeline.cpp  RendererInitPipeline.h  RendererTeardown.cpp  RendererTeardown.h  ResourceLifecycleValidator.cpp  ResourceLifecycleValidator.h  SwapchainLifecycle.cpp  SwapchainLifecycle.h  SwapchainRebuilder.cpp  SwapchainRebuilder.h  VulkanBootstrap.cpp  VulkanBootstrap.h
src/renderer/memory/: BufferImageAllocator.cpp  BufferImageAllocator.h
src/renderer/model/: ModelImportService.cpp  ModelImportService.h
src/renderer/passes/: GBufferPass.cpp  GBufferPass.h  LightingPass.cpp  LightingPass.h  PostProcessPass.cpp  PostProcessPass.h  RenderPassBase.h  ShadowPass.cpp  ShadowPass.h
src/renderer/pipeline/: PipelineBuilder.cpp  PipelineBuilder.h
src/renderer/query/: SwapchainQuery.cpp  SwapchainQuery.h
src/renderer/resources/: RenderTargetsBuilder.cpp  RenderTargetsBuilder.h
src/renderer/shader/: ShaderManager.cpp  ShaderManager.h
src/renderer/swapchain/: Swapchain.cpp  Swapchain.h
src/renderer/ui/: GuiContextBuilder.cpp  GuiContextBuilder.h  GuiLayer.cpp  GuiLayer.h  ImGuiBackend.cpp  ImGuiBackend.h  ImGuiContextBuilder.cpp  ImGuiContextBuilder.h
src/scene/: MeshIO.cpp  MeshIO.h  Scene.h
